--- a/pacmanStyle.css
+++ b/pacmanStyle.css
@@ -31,11 +31,11 @@
 }
 
 .cookie{
- background-color: yellow;
- width: 60%;
- height: 60%;
- border-radius: 30%; 
- margin: 10%;	
+ background-color: orange;
+ width: 40%;
+ height: 40%; 
+ margin: 30%;	
+ border-radius: 10%;
 }
 
 body{
@@ -50,4 +50,30 @@ body{
  float: right;
  margin: 2vw;	
 }
+
+#pacman{
+ background-color: yellow;
+ width: 60%;
+ height: 60%;
+ border-radius: 30%; 
+ margin: 10%;
 }
+
+#ghost1{
+ background-color: red;
+ width: 60%;
+ height: 60%;
+ border-radius: 30%; 
+ margin: 10%;
+}
+
+#ghost2{
+ background-color: green;
+ width: 60%;
+ height: 60%;
+ border-radius: 30%; 
+ margin: 10%;
+}
+
+
+
